# spectral-cortex

./: AGENTS.md  Cargo.toml  README.md  repomix-output.xml  smg-v2-check.json  smg-v3-check.json  smg.json
.codex/: config.toml
.pearls/: config.toml  issues.jsonl
crates/spectral-cortex-cli/: Cargo.toml  build.rs
crates/spectral-cortex-cli/src/: git_commit_split.rs  main.rs  mcp_server.rs
crates/spectral-cortex-cli/src/ast/: javascript.rs  mod.rs  python.rs  registry.rs  rust.rs  symbol_parser.rs  typescript.rs
crates/spectral-cortex-cli/tests/: integration_candidate_min_score.rs  integration_roundtrip.rs
crates/spectral-cortex-lib/: Cargo.toml
crates/spectral-cortex-lib/src/: lib.rs  temporal.rs
crates/spectral-cortex-lib/src/embed/: mod.rs
crates/spectral-cortex-lib/src/graph/: mod.rs  spectral.rs
crates/spectral-cortex-lib/src/lanzcos/: hermitian.rs  mod.rs
crates/spectral-cortex-lib/src/model/: conversation_turn.rs  mod.rs  smg_note.rs
crates/spectral-cortex-lib/src/utils/: logging.rs
crates/spectral-cortex-lib/tests/: spectral_utils.rs
crates/spectral-cortex-mcp/: Cargo.toml
crates/spectral-cortex-mcp/src/: main.rs  tools.rs
docs/: GIT_COMMIT_COMPREHENSION.md  INSIGHTS1.md  SPECTRAL_CORTEX.md  UI_FEATURES.md  USER-GUIDE.md  example-mcp.rs  index-old.html  index.html  memfly-paper.md  rust-embed-pool.ts
docs/plans/: GIT_HISTORY_PLAN.md  LINKS_SIMILARITY_PLAN.md  PROGRESS_REPORTING.md  RUST_PLAN.md  TREE_SITTER.md
docs/product/: research1.md  seeking.md  tree-sitter-roadmap.md  tree-sitter.md
docs/reports/: 2026-03-30-react-case-study-selective-hydration.md
ui/: PLAN.md  app.js  index.html  styles.css
