[package]
name = "spectral-cortex-lib"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the Spectral Memory Graph (SMG)"
license = "MIT"

# Explicit crate name for the library (underscored form used in `use spectral_cortex::...`)
[lib]
name = "spectral_cortex"
path = "src/lib.rs"

[dependencies]
once_cell = "1.19"
anyhow = "1.0"
# The real embedding runtime is enabled by default so the CLI and library use the
# real MiniLM embedder without requiring an explicit feature flag.
rust_embed = { git = "https://github.com/mrorigo/rust-embed.git", branch = "bugfix/infinite-recursion" }
ndarray = "0.16.1"
nalgebra = "0.34.1"
linfa = { version = "0.8.1", default-features = false }
linfa-clustering = { version = "0.8.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.11.0"
nalgebra-sparse = "0.10.0"
rand = "0.8"
num = "0.4"

[features]
# Default features: none. The crate selects the real MiniLM embedder by default
# at compile time (the source enables the fake embedder only for `cfg(test)` or
# when the `fake-embed` feature is explicitly enabled).
default = []

# Optional fake embedder for deterministic CI/tests or lightweight local builds.
# Enable explicitly with `--features fake-embed` (or disable default features and
# enable it). The crate's source also selects the fake embedder automatically
# for `cfg(test)` (so unit/integration tests remain deterministic).
fake-embed = []

[dev-dependencies]

# Removed explicit patch for ndarray. Allow Cargo to resolve ndarray = "0.16" compatibility across workspace members.
